# interpole-meth

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
desktop/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: AkimaSpline.cpp  AkimaSpline.h  Base.hpp  Bezier.cpp  Bezier.h  CubicSpline.cpp  CubicSpline.h  Exceptions.cpp  Exceptions.h  Interpolation.h  LagranjPolinome.cpp  LagranjPolinome.h  Linear.cpp  Linear.h  RBFNet.cpp  RBFNet.h  RSFNet.cpp  RSFNet.h  Spline.cpp  Spline.h  Spline.hpp
lib/headers/: Bezier.h  CubicSpline.h  Exceptions.h  LagranjPolinome.h  Linear.h  RBFNet.h
